--- a/css/global.css
+++ b/css/global.css
@@ -208,7 +208,7 @@ nav main a:hover {
     width: 100vw;}
     
     main{
-  width:400px;
+  width:90vw;
   margin-left:5px;
   margin-right:5px;
 }
